invalid_tests/declarations/test5.go
func main() {
    var x int
    var x string  // Erro: redeclaração de x
    
    const y int = 5
    const y string = "test"  // Erro: redeclaração de y
}
